# SPDX-PackageName: vanityhash
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/vanityhash
# SPDX-FileComment: pyproject configs
# SPDX-FileCopyrightText: © 2026 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "vanityhash"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "A hex hash fragment creation tool"
readme = "README"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
dynamic = ["version"]

[tool.setuptools]
script-files = ["vanityhash"]

[tool.black]
line-length = 132
