# SPDX-PackageName: vanityhash
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://forge.colobox.com/rfinnie/vanityhash
# SPDX-FileComment: pyproject configs
# SPDX-FileCopyrightText: © 2026 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "vanityhash"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "A hex hash fragment creation tool"
readme = "README"
requires-python = ">=3.10"
license = "MPL-2.0"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = ["vanityhash"]

[tool.setuptools.packages.find]
include = []

[tool.black]
line-length = 132
